kubernetes/krawl-all-in-one-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: krawl-system
---
# Source: krawl-chart/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: krawl
  namespace: krawl-system
  labels:
    app.kubernetes.io/name: krawl
    app.kubernetes.io/instance: krawl
    app.kubernetes.io/version: "1.0.0"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: krawl
      app.kubernetes.io/instance: krawl
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector: {}
      - namespaceSelector: {}
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
      - port: 5000
        protocol: TCP
  egress:
    - ports:
      - protocol: TCP
      - protocol: UDP
      to:
      - namespaceSelector: {}
      - ipBlock:
          cidr: 0.0.0.0/0
---
# Source: krawl-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krawl
  namespace: krawl-system
  labels:
    app.kubernetes.io/name: krawl
    app.kubernetes.io/instance: krawl
    app.kubernetes.io/version: "1.0.0"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - port: 5000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: krawl
    app.kubernetes.io/instance: krawl
---
# Source: krawl-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krawl
  namespace: krawl-system
  labels:
    app.kubernetes.io/name: krawl
    app.kubernetes.io/instance: krawl
    app.kubernetes.io/version: "1.0.0"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: krawl
      app.kubernetes.io/instance: krawl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: krawl
        app.kubernetes.io/instance: krawl
    spec:
      containers:
      - name: krawl-chart
        image: "ghcr.io/blessedrebus/krawl:1.0.0"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /app/config.yaml
          subPath: config.yaml
          readOnly: true
        - name: wordlists
          mountPath: /app/wordlists.json
          subPath: wordlists.json
          readOnly: true
        - name: database
          mountPath: /app/data
        resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
      volumes:
      - name: config
        configMap:
          name: krawl-config
      - name: wordlists
        configMap:
          name: krawl-wordlists
      - name: database
        persistentVolumeClaim:
          claimName: krawl-db
---
# Source: krawl-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krawl
  namespace: krawl-system
  labels:
    app.kubernetes.io/name: krawl
    app.kubernetes.io/instance: krawl
    app.kubernetes.io/version: "1.0.0"
spec:
  ingressClassName: traefik
  rules:
    - host: "krawl.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: krawl
                port:
                  number: 5000
